--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "apexcharts": "^3.49.1",
     "font-awesome": "^4.7.0",
     "next": "^14.2.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
